package test.enum.and.message.fields1;

message Message1 {
	optional MessageType1 field1 = 2;
	repeated EnumType1 field2 = 3;
}

message MessageType1 {
	optional bool f1 = 1;
}

enum EnumType1 {
	VALUE1 = 1;
	VALUE2 = 2;
}
