package test.field.enumType.defaults;

import "google/protobuf/descriptor.proto";

message FileOptions {
	enum Enum1 {
		SPEED = 1;
		CODE_SIZE = 2;
		LITE_RUNTIME = 3;
	}

	optional Enum1 enum_field1 = 1 [default = SPEED];
	optional Enum2 enum_field2 = 2 [default = VALUE1] ;
	optional fixed32 scalar_field1 = 3 [default = 123];
	//repeated Enum1 rep_enum_field_good1 = 40 [default = "SPEED"];
	repeated Enum1 rep_enum_field_good1 = 50 [(default).part2 = "SPEED"];
	//repeated Enum1 rep_enum_field_good2 = 60 [p1.default.p2 = SPEED];
	repeated Enum1 rep_enum_field1 = 900 ;

}

enum Enum2 {
	VALUE1 = 1;
	VALUE2 = 2;
}

extend google.protobuf.FieldOptions {
	optional Message1 default = 1001;
}

message Message1 {
	optional string part2 = 1;
}